methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:101: error: not found: value droiteV
  droiteV()
  ^PictureMono2:103: error: not found: value droiteV
  droiteV()
  ^PictureMono2:105: error: not found: value droiteV
  droiteV() 
  ^